Add ngrok scripts for local development of bot

--- a/src/BirthdayAssistant.Telegram/appsettings.development.json
+++ b/src/BirthdayAssistant.Telegram/appsettings.development.json
@@ -1,2 +1,11 @@
 ﻿{
+  "Hosting": {
+    "Host": "0.0.0.0",
+    "Port": 8080
+  },
+  "BotIdentity": {
+    "Name": "birthday-assistant-dev",
+    "Username": "BirthAssistBot",
+    "AuthToken": "1325920809:AAFxU1BwkzlyY864s4ibI4Q1HGXQ3r0lYeQ"
+  }
 }   
