--- a/src/BirthdayAssistant.Telegram/appsettings.json
+++ b/src/BirthdayAssistant.Telegram/appsettings.json
@@ -7,7 +7,12 @@
         }
     },
     "Hosting": {
-        "Host": "0.0.0.0",
-        "Port": 8080
+        "Host": "",
+        "Port": 0
+    },
+    "BotIdentity": {
+        "Name": "",
+        "Username": "",
+        "AuthToken": ""
     }
 }
