--- a/src/BirthdayAssistant.Telegram/BirthdayAssistant.Telegram.fsproj
+++ b/src/BirthdayAssistant.Telegram/BirthdayAssistant.Telegram.fsproj
@@ -6,7 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Startup.fs" />
+        <Compile Include="Api\Endpoints\Static.fs" />
+        <Compile Include="Api\Startup.fs" />
         <Compile Include="WorkerService.fs" />
         <Compile Include="Program.fs" />
         <Content Include="appsettings.json">
@@ -23,6 +24,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.4" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
       <PackageReference Include="Suave" Version="2.5.6" />
+      <PackageReference Include="Telegram.Bot" Version="15.7.1" />
     </ItemGroup>
 
     <ItemGroup>
